# kumir2

./: .gitignore  .gitlab-ci.yml  .travis.yml  BUILD-SUSE.txt  BUILD-UBUNTU.txt  CHANGELOG  CMakeLists.txt  FindLLVM.cmake  FindLlvm.cmake  LICENSE.GPL  LICENSE.RU.md  LICENSE.md  LICENSE_RU.rtf  MAINTAINERS_ru.md  PROJECT-python.ru.md  README-WIN32.txt  README.md  Ubuntu_installing_guide.md  build-linux.sh  cmake_install.cmake  configure  custom_variables.cmake  kumir2-classic.desktop  kumir2-highgrade.desktop  kumir2-ide.desktop  kumir2-nightly.spec  kumir2-open.desktop  kumir2-professional.desktop  kumir2-python-teacher.desktop  kumir2-python.desktop  kumir2-run.desktop  kumir2-teacher.desktop  kumir2.changes  kumir2.dsc  kumir2.files  kumir2.includes  kumir2.nsi  kumir2.pri  kumir2.pro  kumir2.spec  (+11 more)
share/kumir2/courses/: CMakeLists.txt
src/: CMakeLists.txt  Fpc-Pascal.cmake  VERSION.h  kumir2_library.cmake  kumir2_plugin.cmake  kumir2library.pri  kumir2plugin.pri  rpath.pri  src.pro
src-www/helpviewer/: .gitignore  CMakeLists.txt  build.xml  helpviewer.webspec
src-www/helpviewer/war/: _print.html  docbook-print-article.css  docbook-print-book.css  docbook-print.css  docbook-screen.css  index.html  viewer.css
src/actors/: CMakeLists.txt  actors.pro
src/actors/_colorer/: CMakeLists.txt  _colorer.json  _colorermodule.cpp  _colorermodule.h
src/actors/complexnumbers/: .gitignore  ActorComplexNumbers.pluginspec  CMakeLists.txt  complexnumbers.json  complexnumbersmodule.cpp  complexnumbersmodule.h
src/actors/draw/: CMakeLists.txt  draw.json  drawmodule.cpp  drawmodule.h
src/actors/grasshopper/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  grasshopper.json  grasshoppermodule.cpp  grasshoppermodule.h  kuznec.cpp  kuznec.h  pult.cpp  pult.h  pult.ui
src/actors/isometricrobot/: CMakeLists.txt  cellgraphicsitem.cpp  cellgraphicsitem.h  fp.h  graphicsimageitem.cpp  graphicsimageitem.h  isometricrobot.json  isometricrobotmodule.cpp  isometricrobotmodule.h  remotecontrol.cpp  remotecontrol.h  robot25dwindow.cpp  robot25dwindow.h  robot25dwindow.ui  robotcell.h  robotitem.cpp  robotitem.h  robotmodel.cpp  robotmodel.h  robotview.cpp  robotview.h  sch_algorithm.cpp  sch_algorithm.h  sch_command.h  sch_environment.cpp  sch_environment.h  sch_game.cpp  sch_game.h  sch_program.h  sch_task.cpp  sch_task.h  util.cpp  util.h
src/actors/keyboard/: CMakeLists.txt  keyboard.json  keyboardmodule.cpp  keyboardmodule.h
src/actors/painter/: ActorPainter.pluginspec  CMakeLists.txt  Painter.pluginspec  lib.cmake  module.cmake  painter.json  painter.pro  painter_c.cpp  painter_c.h  painter_c.libspec  painter_c.pri  painter_c.pro  paintermodule.cpp  paintermodule.h  painternewimagedialog.cpp  painternewimagedialog.h  painternewimagedialog.ui  painterplugin.cpp  painterplugin.h  painterruler.cpp  painterruler.h  paintertools.cpp  paintertools.h  painterview.cpp  painterview.h  painterwindow.cpp  painterwindow.h  painterwindow.ui  painterworker.cpp  painterworker.h  scrollarea.cpp  scrollarea.h
src/actors/robot/: CMakeLists.txt  cfield.cpp  cfield.h  editline.cpp  editline.h  pult.cpp  pult.h  pult.ui  rfield.cpp  rfield.h  robot.json  robotmodule.cpp  robotmodule.h  robotview.cpp  robotview.h  srobot.cpp  srobot.h
src/actors/robot25d/: CMakeLists.txt  isometricrobotmodule.cpp  isometricrobotmodule.h  robot25d.json  robot25dwindow.cpp  robot25dwindow.h  robot25dwindow.ui  roboterrors.h  robotitem.cpp  robotitem.h  robotview.cpp  robotview.h  sch_algorithm.cpp  sch_command.cpp  sch_environment.cpp  sch_program.cpp  sch_task.cpp  util.h
src/actors/turtle/: CMakeLists.txt  pult.cpp  pult.h  pult.ui  turtle.cpp  turtle.h  turtle.json  turtlemodule.cpp  turtlemodule.h
src/actors/umki/: CMakeLists.txt  README.md  pult.cpp  pult.h  pult.ui  umki.json  umkibase.cpp  umkibase.h  umkimodule.cpp  umkimodule.h
src/actors/vodoley/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  pult.cpp  pult.h  pult.ui  ui_dialog.h  ui_pult.h  vodoley.cpp  vodoley.h  vodoley.json  vodoleymodule.cpp  vodoleymodule.h
src/app/: CMakeLists.txt  app.pro  kumir2-bc.appspec  kumir2-bc.cmake  kumir2-bc.pro  kumir2-cc.appspec  kumir2-cc.cmake  kumir2-cc.pro  kumir2-classic.appspec  kumir2-classic.cmake  kumir2-classic.icns  kumir2-classic.pro  kumir2-classic.rc  kumir2-compiler.pro  kumir2-ide.appspec  kumir2-ide.cmake  kumir2-ide.pro  kumir2-launcher.cpp  kumir2-macx.cmake  kumir2-run.appspec  kumir2-run.cmake  kumir2-run.pro  kumir2-teacher.appspec  kumir2-teacher.cmake  kumir2-teacher.pro  kumir2-teacher.rc  kumir2.icns  kumir2.rc  main.cpp
src/app/kumir2-bc/: CMakeLists.txt  kumir2-bc.pro
src/app/kumir2-cc/: CMakeLists.txt  kumir2-cc.pro
src/app/kumir2-checkcourse/: CMakeLists.txt
src/app/kumir2-classic/: CMakeLists.txt  kumir2-classic.rc
src/app/kumir2-highgrade/: CMakeLists.txt  kumir2-highgrade.rc
src/app/kumir2-ide/: CMakeLists.txt  kumir2-ide.rc
src/app/kumir2-lc/: CMakeLists.txt  kumir2-lc.appspec
src/kumir2-libs/q7zip/: 7z.cmake  (+13 more)
src/plugins/: CMakeLists.txt  plugins.pro
src/shared/: CMakeLists.txt  shared.pro
src/tools/: CMakeLists.txt  tools.pro
userdocs/: ActorDraw.xml  ActorGrasshopper.xml  ActorIsometricRobot.xml  ActorKeyboard.xml  ActorPainter.xml  ActorRobot.xml  ActorRobot_teacher.xml  ActorTurtle.xml  ActorUmki.xml  ActorVodoley.xml  CMakeLists.txt  default.xml  index-classic.xml  index-highgrade.xml  index-ide.xml  index-python.xml  index-teacher.xml  language.xml  system.xml
userdocs/language/: ActorFiles.xml  ActorStringUtils.xml  builtin-actors-highgrade.xml  compound_commands.xml  files.xml  indentifiers.xml  index-classic.xml  index-highgrade.xml  index.xml  lexical_cast.xml  math.xml  short_man.xml  simple_commands.xml  simple_string.xml  standard_library-classic.xml  standard_library-highgrade.xml  standard_library.xml  stringutils.xml  structure.xml  sys_func.xml
userdocs/system/: editor.xml  index-classic.xml  index-highgrade.xml  index-ide.xml  index-teacher.xml  index.xml  intro.xml  mainwindow.xml  run.xml  secondarywindows.xml  session.xml  teacher.xml
(+3136 files in other folders)
