# Mainstream plugins to be always build
add_subdirectory(editor)
add_subdirectory(coregui)
add_subdirectory(coursemanager)

add_opt_subdirectory(kumiranalizer)
add_opt_subdirectory(kumircodegenerator)
add_opt_subdirectory(kumircoderun)
add_opt_subdirectory(kumircompilertool)

#add_opt_subdirectory(llvmcodegenerator)
add_opt_subdirectory(python3language)

