project(default_course)
cmake_minimum_required(VERSION 2.8)

file(MAKE_DIRECTORY ${SHARE_PATH}/courses)
file(GLOB_RECURSE resfiles RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/*)
foreach(res IN ITEMS ${resfiles})
    if((NOT ${res} MATCHES ^[.].*) AND (NOT ${res} MATCHES CMakeLists))
        get_filename_component(subdir ${res} PATH)
        file(MAKE_DIRECTORY ${SHARE_PATH}/courses/${subdir})
        file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/${res} DESTINATION ${SHARE_PATH}/courses/${subdir})
        install(FILES ${SHARE_PATH}/courses/${res} DESTINATION ${RESOURCES_DIR}/courses/${subdir})
    endif()
endforeach(res)
